<resources>
    <string name="app_name">PhoneApp</string>
    <string name="menu_home">Home</string>
    <string name="menu_shopping">Giỏ hàng</string>
    <string name="menu_message">Nhắn tin</string>
    <string name="menu_profile">Thông tin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_feedback">Phản hồi</string>
    <string name="menu_changepassword">Đổi mật khẩu</string>
    <string name="menu_transaction_history">Lịch sử giao dịch</string>
    <string name="menu_logout">Thoát</string>
    <string name="menu_managerPhone">Quản lý điện thoại</string>
    <string name="menu_managerFeedback">quản lý phản hồi</string>
    <string name="menu_managerUser">quản lý tài khoản</string>
    <string name="menu_managerPhoneDetails">quản lý thông tin điện thoại</string>
    <string name="menu_admin">admin</string>


    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="addCarts">Thêm vào giỏ hàng</string>
    <string name="hoten">Họ tên</string>
    <string name="sdt">Số điện thoại</string>
    <string name="mk">Mật khẩu</string>
    <string name="nhaplai">Nhập lại mật khẩu</string>
    <string name="style">Khi ấn đang kí , bạn đồng ý với các
                            Điều khoản , chính sách</string>
    <string name="register">Đăng ký</string>
    <string name="ho_va_ten">ho va ten</string>
    <string name="so_dien_thoai">so dien thoai</string>


    //facebook
    <string name="facebook_app_id">779089929310945</string>
    <string name="fb_login_protocol_scheme">fb779089929310945</string>
    <string name="statistical">Thống kê</string>

</resources>
