<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single" >
        <item android:title="@string/menu_admin">

        <menu>
        <item
            android:id="@+id/nav_managerPhone"
            android:icon="@drawable/ic_baseline_play_arrow_24"
            android:title="@string/menu_managerPhone"
            />


        <item
            android:id="@+id/nav_managerFeedback"
            android:icon="@drawable/ic_baseline_play_arrow_24"
            android:title="@string/menu_managerFeedback"
            />

        <item
            android:id="@+id/nav_managerUser"
            android:icon="@drawable/ic_baseline_play_arrow_24"
            android:title="@string/menu_managerUser"
            />

        <item
            android:id="@+id/nav_statistical"
            android:icon="@drawable/ic_baseline_play_arrow_24"
            android:title="@string/statistical"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_play_arrow_24"
            android:title="@string/menu_logout"
            />

        </menu>
        </item>
    </group>
</menu>